added a background hero image with linear & change font style

--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta charset="utf-8">
 
   <title>Feeding Britain</title>
-  <meta name="description" content="">
-  <meta name="author" content="The Coders Guild">
+
+  <meta name="author" content="source control example">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <script src="js/scripts.js"></script>
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>There's no place for
+        <br> hunger in the UK </h1>
+        <p>Access to good quality food for all is possible, and essential for a
+          <br> thriving society.</p>
+      </div>
+    </div>
 
-  <h1>There's no place for hunger in the UK</h1>
-  <h2>Access to good quality food for all is possible, and essential for a thriving society.</h2>
-  <p>
-    <img src = "spaghetti.jpg"
-         alt = "children eating spaghetti" />
-  </p>
 </body>
 </html>
